@@ -1,3 +1,13 @@
+2011-12-05  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>
+
+       * config/arm/arm.c (vfp3_const_double_for_fract_bits): Define.
+       * config/arm/arm-protos.h (vfp3_const_double_for_fract_bits): Declare.
+       * config/arm/constraints.md ("Dt"): New constraint.
+       * config/arm/predicates.md
+       (const_double_vcvt_power_of_two_reciprocal): New.
+       * config/arm/vfp.md (*arm_combine_vcvt_f32_s32): New.
+       (*arm_combine_vcvt_f32_u32): New.
+
 2011-12-05  Richard Guenther  <rguenther@suse.de>
 
 	* cgraph.c (cgraph_create_edge_1): Initialize
